// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`all granted matches snapshot 1`] = `
<div>
  <div
    class="flex min-h-screen items-center justify-center bg-background p-4 md:p-8"
  >
    <div
      class="w-full max-w-3xl"
    >
      <div
        class="mb-8 text-center"
      >
        <div
          class="mb-4 flex items-center justify-center gap-2"
        >
          <div
            class="flex size-12 items-center justify-center rounded-lg bg-primary"
          >
            <svg
              aria-label="Console icon"
              class="size-7 text-primary-foreground"
              fill="none"
              role="img"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <title>
                Console icon
              </title>
              <path
                d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <h1
          class="mb-2 font-semibold text-3xl tracking-tight"
        >
          System Permissions
        </h1>
        <p
          class="text-muted-foreground"
        >
          To manage your macOS system declaratively, nixmac needs the following permissions
        </p>
      </div>
      <div
        class="flex flex-col gap-6 rounded-xl border bg-card text-card-foreground shadow-sm mb-6 p-6"
        data-slot="card"
      >
        <div
          class="space-y-6"
        >
          <div
            class="flex flex-col gap-3 border-b pb-6 last:border-b-0 last:pb-0"
          >
            <div
              class="flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 flex-1"
              >
                <div
                  class="mb-1 flex flex-wrap items-center gap-2"
                >
                  <h3
                    class="font-medium text-foreground"
                  >
                    Desktop Folder Access
                  </h3>
                  <span
                    class="rounded-md bg-primary/10 px-2 py-0.5 font-medium text-primary text-xs"
                  >
                    Required
                  </span>
                  <span
                    class="rounded-md border px-2 py-0.5 font-medium text-xs bg-console-success/10 text-console-success border-console-success/20"
                  >
                    ✓
                     
                    Granted
                  </span>
                </div>
                <p
                  class="text-muted-foreground text-sm"
                >
                  Required to manage and sync desktop files and configurations
                </p>
              </div>
              <div
                class="flex-shrink-0"
              >
                <button
                  class="inline-flex shrink-0 items-center justify-center whitespace-nowrap font-medium text-sm outline-none transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-8 gap-1.5 rounded-md px-3 has-[>svg]:px-2.5"
                  data-slot="button"
                  disabled=""
                >
                  Granted
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-3 border-b pb-6 last:border-b-0 last:pb-0"
          >
            <div
              class="flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 flex-1"
              >
                <div
                  class="mb-1 flex flex-wrap items-center gap-2"
                >
                  <h3
                    class="font-medium text-foreground"
                  >
                    Documents Folder Access
                  </h3>
                  <span
                    class="rounded-md bg-primary/10 px-2 py-0.5 font-medium text-primary text-xs"
                  >
                    Required
                  </span>
                  <span
                    class="rounded-md border px-2 py-0.5 font-medium text-xs bg-console-success/10 text-console-success border-console-success/20"
                  >
                    ✓
                     
                    Granted
                  </span>
                </div>
                <p
                  class="text-muted-foreground text-sm"
                >
                  Required to access and manage configuration files stored in Documents
                </p>
              </div>
              <div
                class="flex-shrink-0"
              >
                <button
                  class="inline-flex shrink-0 items-center justify-center whitespace-nowrap font-medium text-sm outline-none transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-8 gap-1.5 rounded-md px-3 has-[>svg]:px-2.5"
                  data-slot="button"
                  disabled=""
                >
                  Granted
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-3 border-b pb-6 last:border-b-0 last:pb-0"
          >
            <div
              class="flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 flex-1"
              >
                <div
                  class="mb-1 flex flex-wrap items-center gap-2"
                >
                  <h3
                    class="font-medium text-foreground"
                  >
                    Administrator Privileges
                  </h3>
                  <span
                    class="rounded-md bg-primary/10 px-2 py-0.5 font-medium text-primary text-xs"
                  >
                    Required
                  </span>
                  <span
                    class="rounded-md border px-2 py-0.5 font-medium text-xs bg-console-success/10 text-console-success border-console-success/20"
                  >
                    ✓
                     
                    Granted
                  </span>
                </div>
                <p
                  class="text-muted-foreground text-sm"
                >
                  Required to install system packages and modify system configurations
                </p>
                <div
                  class="mt-2 rounded-md border border-border bg-secondary/50 p-3"
                >
                  <p
                    class="font-mono text-muted-foreground text-xs"
                  >
                    You will be prompted for your password when needed
                  </p>
                </div>
              </div>
              <div
                class="flex-shrink-0"
              >
                <button
                  class="inline-flex shrink-0 items-center justify-center whitespace-nowrap font-medium text-sm outline-none transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-8 gap-1.5 rounded-md px-3 has-[>svg]:px-2.5"
                  data-slot="button"
                  disabled=""
                >
                  Granted
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-3 border-b pb-6 last:border-b-0 last:pb-0"
          >
            <div
              class="flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 flex-1"
              >
                <div
                  class="mb-1 flex flex-wrap items-center gap-2"
                >
                  <h3
                    class="font-medium text-foreground"
                  >
                    Full Disk Access
                  </h3>
                  <span
                    class="rounded-md border px-2 py-0.5 font-medium text-xs bg-console-success/10 text-console-success border-console-success/20"
                  >
                    ✓
                     
                    Granted
                  </span>
                </div>
                <p
                  class="text-muted-foreground text-sm"
                >
                  Recommended for complete system management capabilities
                </p>
                <div
                  class="mt-2 rounded-md border border-border bg-secondary/50 p-3"
                >
                  <p
                    class="font-mono text-muted-foreground text-xs"
                  >
                    Go to System Settings → Privacy & Security → Full Disk Access, then add nixmac to the list
                  </p>
                </div>
              </div>
              <div
                class="flex-shrink-0"
              >
                <button
                  class="inline-flex shrink-0 items-center justify-center whitespace-nowrap font-medium text-sm outline-none transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-8 gap-1.5 rounded-md px-3 has-[>svg]:px-2.5"
                  data-slot="button"
                  disabled=""
                >
                  Granted
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between"
      >
        <p
          class="text-muted-foreground text-sm"
        >
          All required permissions granted!
        </p>
        <button
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap font-medium text-sm outline-none transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4"
          data-slot="button"
        >
          Continue to Console
        </button>
      </div>
      <div
        class="mt-6 rounded-lg border border-border bg-secondary/30 p-4"
      >
        <div
          class="flex gap-3"
        >
          <svg
            aria-label="Information"
            class="mt-0.5 size-5 flex-shrink-0 text-primary"
            fill="none"
            role="img"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <title>
              Information
            </title>
            <path
              d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <div
            class="flex-1"
          >
            <h4
              class="mb-1 font-medium text-sm"
            >
              Why does nixmac need these permissions?
            </h4>
            <p
              class="text-muted-foreground text-xs leading-relaxed"
            >
              nixmac manages your macOS system declaratively, similar to NixOS. It needs access to configuration files, the ability to install packages, and permission to modify system settings to provide a complete system management experience.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`default state matches snapshot 1`] = `
<div>
  <div
    class="flex min-h-screen items-center justify-center bg-background p-4 md:p-8"
  >
    <div
      class="w-full max-w-3xl"
    >
      <div
        class="mb-8 text-center"
      >
        <div
          class="mb-4 flex items-center justify-center gap-2"
        >
          <div
            class="flex size-12 items-center justify-center rounded-lg bg-primary"
          >
            <svg
              aria-label="Console icon"
              class="size-7 text-primary-foreground"
              fill="none"
              role="img"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <title>
                Console icon
              </title>
              <path
                d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
        <h1
          class="mb-2 font-semibold text-3xl tracking-tight"
        >
          System Permissions
        </h1>
        <p
          class="text-muted-foreground"
        >
          To manage your macOS system declaratively, nixmac needs the following permissions
        </p>
      </div>
      <div
        class="flex flex-col gap-6 rounded-xl border bg-card text-card-foreground shadow-sm mb-6 p-6"
        data-slot="card"
      >
        <div
          class="space-y-6"
        >
          <div
            class="flex flex-col gap-3 border-b pb-6 last:border-b-0 last:pb-0"
          >
            <div
              class="flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 flex-1"
              >
                <div
                  class="mb-1 flex flex-wrap items-center gap-2"
                >
                  <h3
                    class="font-medium text-foreground"
                  >
                    Desktop Folder Access
                  </h3>
                  <span
                    class="rounded-md bg-primary/10 px-2 py-0.5 font-medium text-primary text-xs"
                  >
                    Required
                  </span>
                  <span
                    class="rounded-md border px-2 py-0.5 font-medium text-xs bg-secondary text-muted-foreground border-border"
                  >
                    ○
                     
                    Pending
                  </span>
                </div>
                <p
                  class="text-muted-foreground text-sm"
                >
                  Required to manage and sync desktop files and configurations
                </p>
              </div>
              <div
                class="flex-shrink-0"
              >
                <button
                  class="inline-flex shrink-0 items-center justify-center whitespace-nowrap font-medium text-sm outline-none transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-8 gap-1.5 rounded-md px-3 has-[>svg]:px-2.5"
                  data-slot="button"
                >
                  Request
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-3 border-b pb-6 last:border-b-0 last:pb-0"
          >
            <div
              class="flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 flex-1"
              >
                <div
                  class="mb-1 flex flex-wrap items-center gap-2"
                >
                  <h3
                    class="font-medium text-foreground"
                  >
                    Documents Folder Access
                  </h3>
                  <span
                    class="rounded-md bg-primary/10 px-2 py-0.5 font-medium text-primary text-xs"
                  >
                    Required
                  </span>
                  <span
                    class="rounded-md border px-2 py-0.5 font-medium text-xs bg-secondary text-muted-foreground border-border"
                  >
                    ○
                     
                    Pending
                  </span>
                </div>
                <p
                  class="text-muted-foreground text-sm"
                >
                  Required to access and manage configuration files stored in Documents
                </p>
              </div>
              <div
                class="flex-shrink-0"
              >
                <button
                  class="inline-flex shrink-0 items-center justify-center whitespace-nowrap font-medium text-sm outline-none transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-8 gap-1.5 rounded-md px-3 has-[>svg]:px-2.5"
                  data-slot="button"
                >
                  Request
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-3 border-b pb-6 last:border-b-0 last:pb-0"
          >
            <div
              class="flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 flex-1"
              >
                <div
                  class="mb-1 flex flex-wrap items-center gap-2"
                >
                  <h3
                    class="font-medium text-foreground"
                  >
                    Administrator Privileges
                  </h3>
                  <span
                    class="rounded-md bg-primary/10 px-2 py-0.5 font-medium text-primary text-xs"
                  >
                    Required
                  </span>
                  <span
                    class="rounded-md border px-2 py-0.5 font-medium text-xs bg-secondary text-muted-foreground border-border"
                  >
                    ○
                     
                    Pending
                  </span>
                </div>
                <p
                  class="text-muted-foreground text-sm"
                >
                  Required to install system packages and modify system configurations
                </p>
                <div
                  class="mt-2 rounded-md border border-border bg-secondary/50 p-3"
                >
                  <p
                    class="font-mono text-muted-foreground text-xs"
                  >
                    You will be prompted for your password when needed
                  </p>
                </div>
              </div>
              <div
                class="flex-shrink-0"
              >
                <button
                  class="inline-flex shrink-0 items-center justify-center whitespace-nowrap font-medium text-sm outline-none transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-8 gap-1.5 rounded-md px-3 has-[>svg]:px-2.5"
                  data-slot="button"
                >
                  Mark as Done
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col gap-3 border-b pb-6 last:border-b-0 last:pb-0"
          >
            <div
              class="flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 flex-1"
              >
                <div
                  class="mb-1 flex flex-wrap items-center gap-2"
                >
                  <h3
                    class="font-medium text-foreground"
                  >
                    Full Disk Access
                  </h3>
                  <span
                    class="rounded-md border px-2 py-0.5 font-medium text-xs bg-secondary text-muted-foreground border-border"
                  >
                    ○
                     
                    Pending
                  </span>
                </div>
                <p
                  class="text-muted-foreground text-sm"
                >
                  Recommended for complete system management capabilities
                </p>
                <div
                  class="mt-2 rounded-md border border-border bg-secondary/50 p-3"
                >
                  <p
                    class="font-mono text-muted-foreground text-xs"
                  >
                    Go to System Settings → Privacy & Security → Full Disk Access, then add nixmac to the list
                  </p>
                </div>
              </div>
              <div
                class="flex-shrink-0"
              >
                <button
                  class="inline-flex shrink-0 items-center justify-center whitespace-nowrap font-medium text-sm outline-none transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-8 gap-1.5 rounded-md px-3 has-[>svg]:px-2.5"
                  data-slot="button"
                >
                  Mark as Done
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-between"
      >
        <p
          class="text-muted-foreground text-sm"
        >
          Grant all required permissions to continue
        </p>
        <button
          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap font-medium text-sm outline-none transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4"
          data-slot="button"
          disabled=""
        >
          Continue to Console
        </button>
      </div>
      <div
        class="mt-6 rounded-lg border border-border bg-secondary/30 p-4"
      >
        <div
          class="flex gap-3"
        >
          <svg
            aria-label="Information"
            class="mt-0.5 size-5 flex-shrink-0 text-primary"
            fill="none"
            role="img"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <title>
              Information
            </title>
            <path
              d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <div
            class="flex-1"
          >
            <h4
              class="mb-1 font-medium text-sm"
            >
              Why does nixmac need these permissions?
            </h4>
            <p
              class="text-muted-foreground text-xs leading-relaxed"
            >
              nixmac manages your macOS system declaratively, similar to NixOS. It needs access to configuration files, the ability to install packages, and permission to modify system settings to provide a complete system management experience.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
